feat(security): add NVD API key configuration for faster OWASP scans
- Add conditional NVD API key support in build.gradle dependencyCheck block
- Configure 16-second delay to avoid rate limiting
- Update CI workflow to use NVD_API_KEY secret for 10x faster security scans
- Maintain backward compatibility - scans work without API key

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,6 +200,7 @@ jobs:
     - name: Run OWASP Dependency Check
       env:
         GRADLE_OPTS: -Dorg.gradle.unsafe.configuration-cache=false
+        NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
       run: ./gradlew dependencyCheckAnalyze --no-daemon
       continue-on-error: true
 
