refactor: remove UI/UX documentation files from git tracking
- Add UI/UX documentation files to .gitignore
- Remove files from git index while keeping them locally
- These are generated/documentation files that shouldn't be committed

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,8 @@ build.gradle.backup
 .descriptions.xml
 .xml
 
-# IDE inspection files
-.descriptions.xml
-.xml
+# UI/UX Documentation (generated files, not to be committed)
+docs/UI_UX_ANALYSIS.md
+docs/UI_UX_IMPLEMENTATION_CHECKLIST.md
+docs/UI_UX_INTERACTIONS_GUIDE.md
+UI_UX.txt
