refactor(build): remove duplicated testLogging block in Gradle test task
- Consolidate logging settings to reduce maintainability smells flagged by Sonar

--- a/build.gradle
+++ b/build.gradle
@@ -216,12 +216,7 @@ test {
         junitXml.required = true
     }
 
-    // Modern Gradle test configuration
-    testLogging {
-        events "passed", "skipped", "failed"
-        exceptionFormat "full"
-        showStandardStreams = true
-    }
+    // Modern Gradle test configuration (consolidated above)
 }
 
 jacocoTestReport {
