refactor(config): improve configuration management and environment handling
- Refactor AppProperties for better type safety and organization
- Update DatabaseConfig with improved connection handling
- Enhance EnvironmentConfig for better environment variable management
- Update SecurityConfig with improved security settings
- Refactor ActuatorConfig for better monitoring configuration
- Update application.properties with new configuration options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -178,6 +178,12 @@ app.monitoring.enabled=${MONITORING_ENABLED:true}
 app.monitoring.sentry.enabled=${SENTRY_ENABLED:true}
 app.monitoring.health-check.interval=${HEALTH_CHECK_INTERVAL:30}
 
+# Supabase Configuration
+app.supabase.enabled=${SUPABASE_ENABLED:true}
+app.supabase.url=${SUPABASE_URL:}
+app.supabase.anon-key=${SUPABASE_ANON_KEY:}
+app.supabase.realtime.enabled=${SUPABASE_REALTIME_ENABLED:true}
+
 # Spring Boot Actuator Configuration (additional settings)
 management.endpoint.health.show-components=always
 management.endpoint.info.enabled=true
