fix(supabase): resolve database integration and configuration issues
- Remove hardcoded credentials from SupabaseDatabaseConfig
- Implement conditional loading for Supabase database configuration
- Add DotenvEnvironmentPostProcessor for .env file loading
- Fix database configuration conflicts between DatabaseConfig and SupabaseDatabaseConfig
- Add EntityManagerFactory and TransactionManager beans to DatabaseConfig
- Fix Hibernate ddl-auto settings (create-drop for H2, validate for PostgreSQL)
- Make SupabaseAuthController conditional to prevent route conflicts
- Remove duplicate Supabase auth endpoints from AuthController
- Fix compilation errors in test files after AppProperties changes
- Make SimpMessagingTemplate optional in SupabaseRealtimeService
- Add H2 database as runtime dependency for local testing
- Update CHANGELOG.md and README.md with integration improvements

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'io.projectreactor:reactor-test'
+    runtimeOnly 'com.h2database:h2'
     testImplementation 'com.h2database:h2'
     testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver'
